--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                </p>
              </div>
              <div class="left" id="vc">
-               <div id="version"><sub>v</sub>0.10.0</div>
+               <div id="version"><sub>v</sub>0.10.1</div>
              </div>
            </div>
 
@@ -240,7 +240,7 @@
            <ul id="examples">
 
              <li id="repl" class="feature">
-               <h3>Say hi to the REPL</h3>
+               <h3>Say hi to the REPL.</h3>
                <div class="more">
                  <div class="line">
                    <pre><code>$ sbt
@@ -265,7 +265,7 @@ Display all 153 possibilities? (y or n) </code></pre>
              </li>
 
              <li id="scripted" class="feature">
-               <h3>Typesafey is a given</h3>
+               <h3>Typesafey is a given.</h3>
                <div class="more">
                  <div class="line">
                    All project configuration is scripted in Scala providing out of the box modularity and all of the flexibility of the Scala programming language.
@@ -383,7 +383,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
              </li>
 
              <li id="dependency-man" class="feature">
-               <h3>Simply dependable</h3>
+               <h3>Simply dependable.</h3>
                <div class="more">
                  <div class="line">
                    <p>Close your eyes. Now open them. You no longer have to mangage your dependencies in xml. Sbt provides a simple declarative dsl for weaving together what your project depends on and takes care of the rest.</p>
@@ -400,13 +400,20 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
            </ul>
          </div>
        </div>
-
+     <script type="text/javascript" src="jquery.scrollto.min.js"></script>
      <script type="text/javascript">
        (function($){ $(function(){
          $('#more').click(function() { $('#info').slideToggle('fast'); });
            var applyH = function() { var h = $(window).height();$("#intro, .feature").height(h); };
          $(window).bind('resize', function() { applyH(); });
          applyH();
+         $('#features a').click(function(e){
+             e.preventDefault();
+             var h = $(this).attr('href');
+             $(h).ScrollTo({
+                 callback:function(){ window.location.hash = h;}
+             });
+         });
          /*$(document).scroll(function(e) {
              var st = $(this).scrollTop(), os = [];
              $.map($("#intro, #examples .feature"), function(e){
