narrow click area for more

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
      <script type="text/javascript" src="jquery.scrollto.min.js"></script>
      <script type="text/javascript">
        (function($){ $(function(){
-         $('#more').click(function() { $('#info').slideToggle('fast'); });
+         $('#more-hand').click(function() { $('#info').slideToggle('fast'); });
            var applyH = function() { var h = $(window).height();$("#intro, .feature").height(h); };
          $(window).bind('resize', function() { applyH(); });
          applyH();
