--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
          #more { background:#333; position:fixed; left:0; right:0; top:0; z-index:9999;}
 
-         #more-hand { color:#eee; margin:.25em .5em 0 .5em; }
+         #more-hand, #top { color:#eee; margin:.25em .5em 0 .5em; }
 
          a#start:link, a#start:visited { border-left:0;}
 
@@ -60,7 +60,7 @@
 
          #subscribe, #wiki, #src { margin:0 0 .5em 0;}
 
-         #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; }
+         #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; } #top { float:left; }
 
          #info { display:none; }
          #info a { padding-left: .25em; }
@@ -76,11 +76,7 @@
            padding:.25em;
          }
 
-         .feature h3 {
-
-         }
          .feature .more {
-
              padding:1em .25em;
          }
 
@@ -176,6 +172,7 @@
            </div>
          </div>
          <div id="more-hand">↬ more</div>
+         <div id="top">^ top</div>
          <div id="install">
            <a href="#" id="start">get started</a>
          </div>
@@ -404,7 +401,8 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
      <script type="text/javascript">
        (function($){ $(function(){
          $('#more-hand').click(function() { $('#info').slideToggle('fast'); });
-           var applyH = function() { var h = $(window).height();$("#intro, .feature").height(h); };
+         $("#top").click(function(){ $("#intro").ScrollTo(); })
+         var applyH = function() { var h = $(window).height();$("#intro, .feature").height(h); };
          $(window).bind('resize', function() { applyH(); });
          applyH();
          $('#features a').click(function(e){
