--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
          #subscribe, #wiki, #src { margin:0 0 .5em 0;}
 
-         #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; } #top { float:left; }
+         #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; } #top { float:left; margin-left:30%; text-align:center; }
 
          #info { display:none; }
          #info a { padding-left: .25em; }
@@ -174,7 +174,7 @@
          <div id="more-hand">↬ more</div>
          <div id="top">^ top</div>
          <div id="install">
-           <a href="#" id="start">get started</a>
+           <a href="#" id="start">↬ get started</a>
          </div>
        </div>
 
