mailing list link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
          #features ul { list-style:none; width:50%; }
 
-         #subscribe, #wiki, #src { margin:0 0 .5em 0;}
+         #subscribe, #wiki, #src, #list { margin:0 0 .5em 0;}
 
          #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; } #top { float:left; margin-left:30%; text-align:center; }
 
@@ -155,8 +155,8 @@
            <div id="src">
              <a target="_blank" href="http://harrah.github.com/xsbt/latest/sxr/index.html">Annotated Source</a>
            </div>
-           <div id="wiki">
-             <a target="_blank" href="http://github.com/harrah/xsbt/wiki">Community Documentation</a>
+           <div id="list">
+             <a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Mailing List</a>
            </div>
            <div id="subscribe">
              <form action="http://groups.google.com/group/simple-build-tool/boxsubscribe">
@@ -166,6 +166,9 @@
            </div>
            </div>
            <div id="info-right">
+             <div id="wiki">
+               <a target="_blank" href="http://github.com/harrah/xsbt/wiki">Community Documentation</a>
+             </div>
              <div id="contribute">
                 <a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a>
              </div>
