--- a/index.html
+++ b/index.html
@@ -30,19 +30,26 @@
 
          li { margin:1em 0; }
 
-         #more a:link, #more a:visited, #subscribe { border-left:4px solid #eee; }
+         #more a:link, #more a:visited, #subscribe {
+           border-left:4px solid #eee;
+         }
 
          #more a:hover { border-left: 4px solid #aaa; }
 
-         #more { background:#333; position:fixed; left:0; right:0; top:0; z-index:9999;}
+         #more {
+           background:#333; position:fixed;
+           left:0; right:0; top:0; z-index:9999;
+         }
 
          #more-hand, #top { color:#eee; margin:.25em .5em 0 .5em; }
 
          a#start:link, a#start:visited { border-left:0;}
 
-         #intro, .feature h3, .feature .line { width:940px; margin:0 auto; }
+         #intro, .feature h3, .feature .line, #foot .content {
+           width:940px; margin:0 auto;
+         }
 
-         #features { font-size: 80%; color:#12E3FF; margin:1em 0; }
+         #features {  text-shadow: 0 0 #ccc; font-size: 80%; color:#12E3FF; margin:1em 0; }
 
          #intro { padding:1em 1em 1em 0; text-align:left; height:100%; }
 
@@ -68,6 +75,13 @@
          #extra { height: 100%; }
          #examples { margin:.5em 0 0 0; line-height:1.5em; }
 
+         #foot {
+           background: #576369;
+           color:#eee;
+           font-size:smaller;
+           padding:1em 0;
+         }
+
          .line {
            margin:.5em 0 0 0;
          }
@@ -80,11 +94,11 @@
              padding:1em .25em;
          }
 
-         #examples .feature:nth-child(5n+1) .more { color:#FFF5FD; background: #EC16C1; }
-         #examples .feature:nth-child(5n+2) .more { color:#686F7A; background: #3BF8FF; }
-         #examples .feature:nth-child(5n+3) .more { color:#686F7A; background: #B5EB83; }
-         #examples .feature:nth-child(5n+4) .more { color:#FFF5FD; background: #EB83D3; }
-         #examples .feature:nth-child(5n+5) .more { color:#FFF5FD; background: #FF4696; }
+         #examples .feature:nth-child(5n+1) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #D82591; }
+         #examples .feature:nth-child(5n+2) .more { text-shadow: 0 1px #333;color:#686F7A; background: #3BF8FF; }
+         #examples .feature:nth-child(5n+3) .more { text-shadow: 0 1px #fff; color:#686F7A; background: #B5EB83; }
+         #examples .feature:nth-child(5n+4) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #EB83D3; }
+         #examples .feature:nth-child(5n+5) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #FF4696; }
 
          #info-left { margin-right:1em; }
 
@@ -160,7 +174,7 @@
            </div>
            <div id="subscribe">
              <form action="http://groups.google.com/group/simple-build-tool/boxsubscribe">
-               <input name="email" type="text" value="you@gmail.com"/>
+               <input name="email" type="text" placeholder="you@gmail.com"/>
                <input name="sub" type="submit" class="btn" value="Join the Mailing List"/>
              </form>
            </div>
@@ -398,12 +412,22 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
              </li>
 
            </ul>
+           <div id="foot">
+             <div class="content">
+               footer stuff here
+             </div>
+           </div>
          </div>
        </div>
      <script type="text/javascript" src="jquery.scrollto.min.js"></script>
      <script type="text/javascript">
        (function($){ $(function(){
-         $('#more-hand').click(function() { $('#info').slideToggle('fast'); });
+         $('#more-hand').click(function() {
+             var self = $(this);
+           $('#info').slideToggle('fast', function() {
+               self.text('↬ ' + (/more/.test(self.text()) ? "less":"more"));
+           });
+         });
          $("#top").click(function(){ $("#intro").ScrollTo(); })
          var applyH = function() { var h = $(window).height();$("#intro, .feature").height(h); };
          $(window).bind('resize', function() { applyH(); });
