--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Display all 153 possibilities? (y or n) </code></pre>
              </li>
 
              <li id="scripted" class="feature">
-               <h3>Typesafey is a given.</h3>
+               <h3>Typesafety is a given.</h3>
                <div class="more">
                  <div class="line">
                    All project configuration is scripted in Scala providing out of the box modularity and all of the flexibility of the Scala programming language.
