--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
          #more a:hover { border-left: 4px solid #aaa; }
 
          #more {
-           background:#333; position:fixed;
+           background:#576369; position:fixed;
            left:0; right:0; top:0; z-index:9999;
+           padding:0 0 .25em 0;
+           text-shadow:0 1px #333;
+           -moz-box-shadow:0px 2px 2px #ccc;
+           -webkit-box-shadow:0px 2px 2px #ccc;
+           box-shadow:0px 2px 2px #ccc;
+           filter: progid:DXImageTransform.Microsoft.Shadow(strength=2, direction=180, color='#cccccc');
+           -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(strength=2, Direction=180, Color='#cccccc')";
          }
 
          #more-hand, #top { color:#eee; margin:.25em .5em 0 .5em; }
@@ -67,7 +74,7 @@
 
          #subscribe, #wiki, #src, #list { margin:0 0 .5em 0;}
 
-         #install { float:right; margin-right:.5em; } #more-hand { float:left; clear:both; } #top { float:left; margin-left:30%; text-align:center; }
+         #install { float:right; margin:.25em .5em 0 0; } #more-hand { float:left; clear:both; } #top { float:left; margin-left:30%; text-align:center; }
 
          #info { display:none; }
          #info a { padding-left: .25em; }
