i knew i'd spell that wrong

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
              </li>
 
              <li id="plugins" class="feature">
-               <h3>Simple Extesibility.</h3>
+               <h3>Simple Extensibility.</h3>
                <div class="more">
                  <div class="line">
                    <p>Plugins provide a means of injecting and augmenting settings and commands.</p><p> Since plugins are just Scala code, you can package and share plugins between projects.</p>
