--- a/index.html
+++ b/index.html
@@ -48,17 +48,20 @@
            -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(strength=2, Direction=180, Color='#cccccc')";
          }
 
-         #more-hand, #top { color:#eee; margin:.25em .5em 0 .5em; }
+         #more-hand, #top { color:#eee; margin:.75em .5em 0 .5em; }
 
-         a#start:link, a#start:visited { border-left:0;}
+         a#start:link, a#start:visited { border-left:0; }
 
          #intro, .feature h3, .feature .line, #foot .content {
            width:940px; margin:0 auto;
          }
 
-         #features {  text-shadow: 0 0 #ccc; font-size: 80%; color:#12E3FF; margin:1em 0; }
+         #features {
+           text-shadow: 0 0 #ccc; font-size: 80%;
+           color:#12E3FF; margin:1em 0;
+         }
 
-         #intro { padding:1em 1em 1em 0; text-align:left; height:100%; }
+         #intro { padding:2em 1em 1em 0; text-align:left; height:100%; }
 
          #head { border-bottom:1px solid #eee; }
 
@@ -74,7 +77,45 @@
 
          #subscribe, #wiki, #src, #list { margin:0 0 .5em 0;}
 
-         #install { float:right; margin:.25em .5em 0 0; } #more-hand { float:left; clear:both; } #top { float:left; margin-left:30%; text-align:center; }
+         #install {
+             float:right;
+             margin:.25em .5em 0 0;
+         }
+
+         #install .btn span {
+             color:#fff;
+             text-shadow:0 1px #ccc;
+         }
+
+         #install .btn {
+             background:#83F537;
+             filter: progid:DXImageTransform.Microsoft.gradient(
+             startColorstr='#12E3FF', endColorstr='#28D7FA');
+             background: -webkit-gradient(linear, left top,
+                                          left bottom, from(#12E3FF),
+                                          to(#28D7FA));
+             background: -moz-linear-gradient(top, #3F537, #D1D1D1);
+             border:1px solid #28D7FA;
+             color:#333;
+             text-shadow:0 1px #eee;
+             -moz-box-shadow:0px 0px 4px #333333;
+             -webkit-box-shadow:0px 0px 4px #333333;
+             box-shadow:0px 0px 4px #333333;
+         }
+
+         #install .btn:hover {
+             background:#83F537;
+             filter: progid:DXImageTransform.Microsoft.gradient(
+             startColorstr='#4CD6F1', endColorstr='#28D7FA');
+             background: -webkit-gradient(linear, left top,
+                                          left bottom, from(#4CD6F1),
+                                          to(#00D4FF));
+             background: -moz-linear-gradient(top, #3F537, #D1D1D1);
+             border:1px solid #28D7FA;
+         }
+
+         #more-hand { float:left; clear:both; }
+         #top { float:left; margin-left:30%; text-align:center; }
 
          #info { display:none; }
          #info a { padding-left: .25em; }
@@ -94,7 +135,7 @@
          }
 
          .feature {
-           padding:.25em;
+           padding:1.5em .25em;
          }
 
          .feature .more {
@@ -127,10 +168,11 @@
            background:#eee;
            padding:.25em .5em;
            font-size:18px;
-           -webkit-border-radius: 10px;
-           -moz-border-radius: 10px;
-           border-radius: 10px;
+           -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+           border-radius: 5px;
            background: #eee;
+           text-shadow:0 1px #fff;
            filter: progid:DXImageTransform.Microsoft.gradient(
                startColorstr='#eeeeee', endColorstr='#D1D1D1');
            background: -webkit-gradient(linear, left top,
@@ -198,7 +240,7 @@
          <div id="more-hand">↬ more</div>
          <div id="top">^ top</div>
          <div id="install">
-           <a href="#" id="start">↬ get started</a>
+           <button class="btn" id="start"><span>↬</span> get the launcher</button>
          </div>
        </div>
 
