--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
              background: -webkit-gradient(linear, left top,
                                           left bottom, from(#12E3FF),
                                           to(#28D7FA));
-             background: -moz-linear-gradient(top, #3F537, #D1D1D1);
+             background: -moz-linear-gradient(top, #12E3FF, #28D7FA);
              border:1px solid #28D7FA;
              color:#333;
              text-shadow:0 1px #eee;
@@ -113,11 +113,11 @@
          #install .btn:hover {
              background:#83F537;
              filter: progid:DXImageTransform.Microsoft.gradient(
-             startColorstr='#4CD6F1', endColorstr='#28D7FA');
+             startColorstr='#4CD6F1', endColorstr='#00D4FF');
              background: -webkit-gradient(linear, left top,
                                           left bottom, from(#4CD6F1),
                                           to(#00D4FF));
-             background: -moz-linear-gradient(top, #3F537, #D1D1D1);
+             background: -moz-linear-gradient(top, #4CD6F1, #00D4FF);
              border:1px solid #28D7FA;
          }
 
@@ -129,6 +129,10 @@
 
          #extra { height: 100%; }
          #examples { margin:.5em 0 0 0; line-height:1.5em; }
+
+         .ita {
+           text-align:right;
+         }
 
          #foot {
            background: #576369;
@@ -335,7 +339,9 @@
 Display all 153 possibilities? (y or n) </code></pre>
                  </div>
                </div>
-               <a href="#scripted" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#scripted" class="ita">is that all?</a>
+               </div>
              </li>
 
              <li id="scripted" class="feature">
@@ -359,7 +365,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 </code></pre>
                  </div>
                </div>
-               <a href="#plugins" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#plugins" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="plugins" class="feature">
@@ -377,7 +385,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 }</code></pre>
                  </div>
                </div>
-                <a href="#compilation" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#compilation" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="compilation" class="feature">
@@ -395,7 +405,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 </code></pre>
                  </div>
                </div>
-               <a href="#trigger" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#trigger" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="trigger" class="feature">
@@ -408,7 +420,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                    <pre><code>> ~ test</code></pre>
                  </div>
                </div>
-               <a href="#cross-compile" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#cross-compile" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="cross-compile" class="feature">
@@ -421,7 +435,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                    <pre><code>> + compile</code></pre>
                  </div>
                </div>
-               <a href="#testing" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#testing" class="st">is that all?</a>
+               </div<
              </li>
 
              <li id="testing" class="feature">
@@ -434,7 +450,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                    <pre><code>> test-only your.EasySpec</code></pre>
                  </div>
                </div>
-               <a href="#multi-project" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#multi-project" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="multi-project" class="feature">
@@ -451,7 +469,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 }</code></pre>
                  </div>
                </div>
-               <a href="#parallel" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#parallel" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="parallel" class="feature">
@@ -465,7 +485,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                    <pre><code>/* fill me in */</code></pre>
                  </div>
                </div>
-               <a href="#dependency-man" class="st">is that all?</a>
+               <div class="ita">
+                 <a href="#dependency-man" class="st">is that all?</a>
+               </div>
              </li>
 
              <li id="dependency-man" class="feature">
@@ -481,7 +503,9 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 )</code></pre>
                  </div>
                </div>
+               <div class="ita">
                 <a href="#intro" class="st">is that all?</a>
+               </div>
              </li>
 
            </ul>
