--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
 
          body, html {
-           font-family: 'Copse', serif;
+           font-family: 'Helvetica', sansserif;
            font-size:24px;
            height:100%;
          }
@@ -24,6 +24,8 @@
          }
 
          p { margin-bottom:.5em; }
+
+         h1, h2, h3, h4, h5, #name, #vc { font-family: 'Copse', serif; }
 
          h1 { font-size:170px; line-height:1em; }
 
@@ -53,29 +55,47 @@
 
          #more-hand, #top { color:#eee; margin:.75em .5em 0 .5em; }
 
-         a#get-launcher:link, a#get-launcher:visited { border-left:0; }
+         a#get-launcher:link, a#get-launcher:visited {
+           border-left:0;
+           -moz-box-shadow:0px 0px 4px #333333;
+           -webkit-box-shadow:0px 0px 4px #333333;
+           box-shadow:0px 0px 4px #333333;
+         }
 
-         #intro, .feature h3, .feature .line, #foot .content {
+         #head, #feature-list, .feature h3, .feature .line, #foot .content, .ita, #install-info-content {
            width:940px; margin:0 auto;
          }
 
          #features {
-           text-shadow: 0 0 #ccc; font-size: 80%;
-           color:#12E3FF; margin:1em 0;
+           text-shadow: 0 0 #000;
+           font-size: 80%;
+           margin:1em 0;
          }
 
-         #intro { padding:2em 1em 1em 0; text-align:left; height:100%; }
+         #intro { padding:2.5em 0 0 0; text-align:left; height:100%; }
 
          #head { border-bottom:1px solid #eee; }
 
          #name { width:50%; }
 
-         #vc { height:100%; position:relative; }
-         #version { font-size:130px; margin-top:40px; }
-         #version sub { position:relative; bottom:0; height:100%; color:#ccc; font-size:.5em; }
-         #changelog, #rc {
-           margin-top:.75em;
-           text-align:right;
+         #vc { }
+         #start { font-size:50px; margin-top:100px; }
+         #start em { font-weight:bold; font-size:55px; }
+         #install-primary { margin-top:.75em;}
+         #install-extra { font-size: 70%; color:#ccc; margin-top:.5em; }
+         #install-info {
+             background:#576369
+         }
+         #install-info-content {
+           padding:1em 0;
+           color:#eee;
+           line-height:1.5em;
+           font-size:80%;
+           display:none;
+         }
+         #nix, #win {
+           margin-top:1em;
+           display:none;
          }
 
          #what { font-size:120%; line-height:1.4em; margin:0 0 1em 0; }
@@ -89,12 +109,12 @@
              margin:.25em .5em 0 0;
          }
 
-         #install .btn span {
+         .download.btn span {
              color:#fff;
              text-shadow:0 1px #ccc;
          }
 
-         #install .btn {
+         .download.btn {
              background:#83F537;
              filter: progid:DXImageTransform.Microsoft.gradient(
              startColorstr='#12E3FF', endColorstr='#28D7FA');
@@ -105,12 +125,10 @@
              border:1px solid #28D7FA;
              color:#333;
              text-shadow:0 1px #eee;
-             -moz-box-shadow:0px 0px 4px #333333;
-             -webkit-box-shadow:0px 0px 4px #333333;
-             box-shadow:0px 0px 4px #333333;
+
          }
 
-         #install .btn:hover {
+         .download.btn:hover {
              background:#83F537;
              filter: progid:DXImageTransform.Microsoft.gradient(
              startColorstr='#4CD6F1', endColorstr='#00D4FF');
@@ -152,12 +170,13 @@
          .feature .more {
              padding:1em .25em;
          }
-
+/*
          #examples .feature:nth-child(5n+1) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #D82591; }
          #examples .feature:nth-child(5n+2) .more { text-shadow: 0 1px #333;color:#686F7A; background: #3BF8FF; }
          #examples .feature:nth-child(5n+3) .more { text-shadow: 0 1px #fff; color:#686F7A; background: #B5EB83; }
          #examples .feature:nth-child(5n+4) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #EB83D3; }
          #examples .feature:nth-child(5n+5) .more { text-shadow: 0 1px #333; color:#FFF5FD; background: #FF4696; }
+*/
 
          #info-left { margin-right:1em; }
 
@@ -250,9 +269,9 @@
          </div>
          <div id="more-hand">↬ more</div>
          <div id="top">^ top</div>
-         <div id="install">
-           <button class="btn" data-jar="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch/0.10.1/sbt-launch.jar" id="get-launcher"><span>↬</span> get the launcher</button>
-         </div>
+         <!--<div id="install">
+           <button class="btn download" data-jar="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch/0.10.1/sbt-launch.jar" id="get-launcher"><span>↬</span> Get Going</button>
+         </div>-->
        </div>
 
        <div id="container" class="cf">
@@ -267,14 +286,28 @@
                </p>
              </div>
              <div class="left" id="vc">
-               <div id="version"><sub>v</sub>0.10.1</div>
-               <div id="changelog"><a target="_blank" href="https://github.com/harrah/xsbt/wiki/Changes">changelog</a></div>
-               <div id="rc">next rc <a target="_blank" href="http://repo.typesafe.com/typesafe/ivy-snapshots/org.scala-tools.sbt/sbt-launch/0.11.0-RC1/sbt-launch.jar">0.11.0 rc1</a>
+               <div id="start">Start <em>Building</em></div>
+               <div id="install-primary">
+                 <button class="btn download" data-jar="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch/0.10.1/sbt-launch.jar" id="get-launcher-primary"><span>↬</span> Download</button> the latest version
+               </div>
+               <div id="install-extra">Click <a id="install-info-toggle" href="#">here</a> for install instructions</div>
+             </div>
+           </div>
+           <div id="install-info">
+             <div id="install-info-content">
+               Are you a <a href="#" id="show-nix">unix/osx</a> or a <a href="#" id="show-win">Windows</a> user?
+               <div id="nix">
+                 If you are running an unix-based operating system, after downloading sbt, open your terminal shell and run the following command
+                 <pre><code>sbt install</code></pre>
+                 Afterwards you run the sbt command in any directory to create a new project.
+               </div>
+               <div id="win">
+                 If you are a window user, ... run some .bat file?
                </div>
              </div>
            </div>
-
            <div id="features" class="cf">
+             <div id="feature-list">
              <ul class="left">
                <li>
                  <a href="#repl">Fast, transparent REPL workflow</a>
@@ -309,6 +342,7 @@
                  <a href="#dependency-man">Concise dependency management DSL</a>
                </li>
              </ul>
+             </div>
            </div>
          </div>
 
@@ -340,7 +374,7 @@ Display all 153 possibilities? (y or n) </code></pre>
                  </div>
                </div>
                <div class="ita">
-                 <a href="#scripted" class="ita">is that all?</a>
+                 <a href="#scripted" class="ita">Is that all?</a>
                </div>
              </li>
 
@@ -366,7 +400,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#plugins" class="st">is that all?</a>
+                 <a href="#plugins" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -386,7 +420,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#compilation" class="st">is that all?</a>
+                 <a href="#compilation" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -406,7 +440,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#trigger" class="st">is that all?</a>
+                 <a href="#trigger" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -421,7 +455,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#cross-compile" class="st">is that all?</a>
+                 <a href="#cross-compile" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -436,7 +470,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#testing" class="st">is that all?</a>
+                 <a href="#testing" class="st">Is that all?</a>
                </div<
              </li>
 
@@ -451,7 +485,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#multi-project" class="st">is that all?</a>
+                 <a href="#multi-project" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -470,7 +504,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#parallel" class="st">is that all?</a>
+                 <a href="#parallel" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -486,7 +520,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                 <a href="#dependency-man" class="st">is that all?</a>
+                 <a href="#dependency-man" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -504,7 +538,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  </div>
                </div>
                <div class="ita">
-                <a href="#intro" class="st">is that all?</a>
+                <a href="#intro" class="st">Is that all?</a>
                </div>
              </li>
 
@@ -544,6 +578,22 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                  callback:function(){ window.location.hash = h;}
              });
          });
+
+         $("#install-info-toggle").bind('click', function(){
+             $('#install-info-content').slideToggle('fast', function() {
+                 $('#nix, #win').hide();
+             });
+         });
+
+           $('#show-nix').bind('click', function(){
+               $('#win').hide();
+               $('#nix').show();
+           });
+           $('#show-win').bind('click', function(){
+               $('#nix').hide();
+               $('#win').show();
+           });
+
          /*$(document).scroll(function(e) {
              var st = $(this).scrollTop(), os = [];
              $.map($("#intro, #examples .feature"), function(e){
