--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
                <div class="more">
                  <div class="line">
                    <p>
-                     By default, build tasks that do not depend on one another in parallel. This also applies to your tests. Instead of sequentially executing your tests, Sbt will run them in parallel.
+                     By default, build tasks that do not depend on one another in execute parallel. This also applies to your tests. Instead of sequentially executing your tests, Sbt will run them in parallel.
                    ...something about parallel task execution...
                    </p>
                  </div>
