fix missing scrollto

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Display all 153 possibilities? (y or n) </code></pre>
                  </div>
                </div>
                <div class="ita">
-                 <a href="#scripted" class="ita">Is that all?</a>
+                 <a href="#scripted" class="st">Is that all?</a>
                </div>
              </li>
 
