--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
                  <p>
                    If you are running an unix-based operating system, open your terminal shell and enable execute permisions on the sbt script
                  </p>
-                 <pre><code>chmod u+x sbt</code></pre>
+                 <pre><code>$ chmod u+x sbt</code></pre>
                  <p>
                    Then run the install command to get the latest
                  </P>
-                 <pre><code>sbt install</code></pre>
+                 <pre><code>$ sbt install</code></pre>
                  <p>
-                   Afterwards you run the sbt command in any directory to create a new project.
+                   Afterwards you can run the sbt command in any directory to create a new project.
                  </p>
                </div>
                <div id="win">
