--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(strength=2, Direction=180, Color='#cccccc')";
          }
 
-         #more-hand, #top { color:#eee; margin:.75em .5em 0 .5em; }
+         #more-hand, #top { color:#eee; margin:.25em .5em 0 .5em; }
 
          a#get-launcher:link, a#get-launcher:visited {
            border-left:0;
@@ -67,12 +67,12 @@
          }
 
          #features {
-           text-shadow: 0 0 #000;
+           text-shadow:  0px 1px 0px #33A7CA;
            font-size: 80%;
            margin:1em 0;
          }
 
-         #intro { padding:2.5em 0 0 0; text-align:left; height:100%; }
+         #intro { padding:2em 0 0 0; text-align:left; height:100%; }
 
          #head { border-bottom:1px solid #eee; }
 
@@ -90,8 +90,9 @@
            padding:1em 0;
            color:#eee;
            line-height:1.5em;
-           font-size:80%;
+           font-size:70%;
            display:none;
+           text-shadow:0 1px #000;
          }
          #install-info-content .controls {
          }
@@ -120,9 +121,8 @@
              background:#83F537;
              filter: progid:DXImageTransform.Microsoft.gradient(
              startColorstr='#12E3FF', endColorstr='#28D7FA');
-             background: -webkit-gradient(linear, left top,
-                                          left bottom, from(#12E3FF),
-                                          to(#28D7FA));
+             background: -webkit-gradient(linear, left top, left bottom,
+                                          from(#12E3FF), to(#28D7FA));
              background: -moz-linear-gradient(top, #12E3FF, #28D7FA);
              border:1px solid #28D7FA;
              color:#333;
@@ -134,9 +134,8 @@
              background:#83F537;
              filter: progid:DXImageTransform.Microsoft.gradient(
              startColorstr='#4CD6F1', endColorstr='#00D4FF');
-             background: -webkit-gradient(linear, left top,
-                                          left bottom, from(#4CD6F1),
-                                          to(#00D4FF));
+             background: -webkit-gradient(linear, left top, left bottom,
+                                          from(#4CD6F1), to(#00D4FF));
              background: -moz-linear-gradient(top, #4CD6F1, #00D4FF);
              border:1px solid #28D7FA;
          }
@@ -176,7 +175,7 @@
          }
 
          .feature .more {
-             padding:1em .25em 0 .25em;
+             padding:.25em .25em 0 .25em;
          }
 
          #info-left { margin-right:1em; }
