--- a/community-plugins.html
+++ b/community-plugins.html
@@ -38,28 +38,7 @@
 
 publishMavenStyle := false</code></pre>   
   </div>
-  <div class="span6 columns blogroll">
-     <div class="span6">
-       Included file 'allposts.txt' not found in _includes directory
-     </div>
-     Included file 'twitter-widget.txt' not found in _includes directory     
-     <!-- Included file 'share-widget.txt' not found in _includes directory -->
-  </div>
-</div>
-<div class="row">
-  <div class="span8 columns">
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-3655601663714994";
-/* blog-bottom */
-google_ad_slot = "1230746706";
-google_ad_width = 468;
-google_ad_height = 60;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-  </div>
+  <div class="span6 columns"><p>&nbsp;</p></div>
 </div>
 
 
