--- a/community-plugins.html
+++ b/community-plugins.html
@@ -3,40 +3,63 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <title>Community Plugin Project - </title>
-   <!-- Homepage CSS -->
-   <!-- <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" /> -->
+   <title>Community Plugins - </title>
+   <link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
+     <link href='resources/site.css' rel='stylesheet' type='text/css'>
+     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
+     </script>
 </head>
 <body>
 
 
     <!-- Topbar
     ================================================== -->
-    <div class="topbar" >
-      <div class="topbar-inner">
-        <div class="container">
+    <div class="cf" id="more" >
+      <div id="top">
+        <a class="brand" href="/">SBT</a>
+        <!--<div class="container">
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
            <li><a href="/community-plugins.html">Community Plugins</a></li>
            <li><a href="http://gitub.com/harrah/xsbt">Project</a></li>
           </ul>
-        </div>
+        </div>-->
       </div>
     </div>
 
 
-<div class="row">
+<div class="cf" id="container">
   <div class="span2 columns"><p>&nbsp;</p></div>
   <div class="span10 columns content">
-    <p>The <a href='http://github.com/sbt'>SBT Organization</a> contains a <a href='http://github.com/sbt/sbt-community-plugins'>SBT Community Plugins</a> project. This project aims to unify all the SBT plugins in the community and ensure their compatibility and timely releases with new versions of SBT.</p>
+    <div id="head" class="cf">
+      <div id="name" class="left">
+        <h1>SBT</h1>
+        <h2>Community Plugins</h2>
+        <p id="what">ensuring everything is possible.</p>
+      </div>
+      <div class="left page-description" id="vc">
+          <p>The <a href='http://github.com/sbt'>SBT Organization</a> contains a <a href='http://github.com/sbt/sbt-community-plugins'>SBT Community Plugins</a> project. This project aims to unify all the SBT plugins in the community and ensure their compatibility and timely releases with new versions of SBT.</p>
+      </div>
+    </div>
+    <div id="features" class="cf">
+      <h4 id='community_ivy_repository'>Community Ivy Repository</h4>
 
-<p>In addition, <a href='http://www.typesafe.com'>Typesafe, Inc.</a> has provided a freely available <a href='http://scalasbt.artifactoryonline.com/scalasbt'>Ivy Repository</a> for SBT projects to make use of.</p>
+<p><a href='http://www.typesafe.com'>Typesafe, Inc.</a> has provided a freely available <a href='http://scalasbt.artifactoryonline.com/scalasbt'>Ivy Repository</a> for SBT projects to make use of.</p>
 
 <p>If you would like to publish your project to this Ivy repository, first contact Joshua.Suereth@typesafe.com and request privileges (we have to verify code ownership, rights to publish, etc.). After which, you can deploy your plugins using the following configuration:</p>
 
 <pre><code>publishTo := Some(Resolver.url(&quot;sbt-plugin-releases&quot;, new URL(&quot;http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases/&quot;))(Resolver.ivyStylePatterns))
 
-publishMavenStyle := false</code></pre>   
+publishMavenStyle := false</code></pre>
+
+<h4 id='sbt_organization'>SBT Organization</h4>
+
+<p>The <a href='http://github.com/sbt'>SBT Organization</a> is available for use by any SBT plugin. Developers who contribute their plugins into the community organization will still retain control over their repository and its access. The Goal of the SBT organization is to organize SBT software into one central location.</p>
+
+<h4 id='sbt_community_plugin_build'>SBT Community Plugin Build</h4>
+
+<p>The <a href='http://github.com/sbt/sbt-community-plugins'>SBT Community Plugins</a> project aims to build <em>all</em> SBT plugins in a single build. This should enable thorough testing of plugins and ensure that plugins work together.</p>   
+    </div>
   </div>
   <div class="span6 columns"><p>&nbsp;</p></div>
 </div>
