--- a/community-plugins.html
+++ b/community-plugins.html
@@ -24,6 +24,7 @@
            <li><a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Community</a></li>
            <li><a target="_blank" href="http://github.com/harrah/xsbt/wiki">Documentation</a></li>
            <li><a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a></li>
+           <li><a href="#top">Top</a></li>
           </ul>
         </div>
       </div>
