--- a/index.html
+++ b/index.html
@@ -9,37 +9,24 @@
      </head>
      <body class="cf">
 
-       <div id="more" class="cf">
-         <div id="info">
-           <div id="info-left">
-           <div id="src">
-             <a target="_blank" href="http://harrah.github.com/xsbt/latest/sxr/index.html">Annotated Source</a>
-           </div>
-           <div id="list">
-             <a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Mailing List</a>
-           </div>
-           <div id="subscribe">
-             <form action="http://groups.google.com/group/simple-build-tool/boxsubscribe">
-               <input name="email" type="text" placeholder="you@gmail.com"/>
-               <input name="sub" type="submit" class="btn" value="Join the Mailing List"/>
-             </form>
-           </div>
-           </div>
-           <div id="info-right">
-             <div id="wiki">
-               <a target="_blank" href="http://github.com/harrah/xsbt/wiki">Community Documentation</a>
-             </div>
-             <div id="contribute">
-                <a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a>
-             </div>
-           </div>
-         </div>
-         <div id="more-hand">↬ more</div>
-         <div id="top">up</div>
-         <!--<div id="install">
-           <button class="btn download" data-jar="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch/0.11.0/sbt-launch.jar" id="get-launcher"><span>↬</span> Get Going</button>
-         </div>-->
-       </div>
+            <!-- Topbar
+    ================================================== -->
+    <div class="cf" id="more" >
+      <div id="top">
+        <div class="container">
+          <a class="brand" href="/">SBT</a>
+          <ul class="nav">
+           <li><a href="/community-plugins.html">Community Plugins</a></li>
+           <li><a target="_blank" href="http://gitub.com/harrah/xsbt">Source</a></li>
+           <li><a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Community</a></li>
+           <li><a target="_blank" href="http://github.com/harrah/xsbt/wiki">Documentation</a></li>
+           <li><a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a></li>
+           <li><a href="#top">Top</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
 
        <div id="container" class="cf">
 
