--- a/community-plugins.html
+++ b/community-plugins.html
@@ -20,7 +20,7 @@
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
            <li><a href="/community-plugins.html">Community Plugins</a></li>
-           <li><a target="_blank" href="http://gitub.com/harrah/xsbt">Source</a></li>
+           <li><a target="_blank" href="http://github.com/harrah/xsbt">Source</a></li>
            <li><a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Community</a></li>
            <li><a target="_blank" href="http://github.com/harrah/xsbt/wiki">Documentation</a></li>
            <li><a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a></li>
