--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                  </p>
                </div>
                <div id="win">
-                 If you are a window user, ... run some .bat file?
+                 If you're feeling adventurous, try our <a href="http://typesafe.artifactoryonline.com/typesafe/windows-releases/org/scalasbt/sbt/0.11.2/sbt.msi">MSI installer</a>.
                </div>
                <div class="controls"><button id="hide-install-info" class="btn">Hide this</button></div>
              </div>
