--- a/download.html
+++ b/download.html
@@ -49,6 +49,8 @@
 <a label='windows' id='windows' />
 <p><a href='http://typesafe.artifactoryonline.com/typesafe/windows-releases/org/scalasbt/sbt/0.11.2/sbt.msi'>Click here</a> for the latest windows MSI.</p>
 
+<p><em>Note: This MSI is still in BETA. While it has been tested it may fail in obscure situations, please make sure to report any issues you may find <a href='https://github.com/sbt/sbt-launcher-package/issues'>here</a>.</em></p>
+
 <h4 id='yum_repositories'>Yum Repositories</h4>
 <a label='rpm' id='rpm' />
 <p>Coming Soon&#8230;</p>
