--- a/download.html
+++ b/download.html
@@ -94,22 +94,23 @@
 
 
     <div id="pagecontent" class="cf">
-      <h4 id='windows_releases'>Windows Releases</h4>
-<a label='windows' id='windows' />
+      <hr /><a label='windows' id='windows' />
+<h4 id='windows_releases'>Windows Releases</h4>
+
 <p><a href='http://typesafe.artifactoryonline.com/typesafe/windows-releases/org/scalasbt/sbt/0.11.2/sbt.msi'>Click here</a> for the latest windows MSI.</p>
 
 <p><em>Note: This MSI is still in BETA. While it has been tested it may fail in obscure situations, please make sure to report any issues you may find <a href='https://github.com/sbt/sbt-launcher-package/issues'>here</a>.</em></p>
-
+<hr /><a label='rpm' id='rpm' />
 <h4 id='yum_repositories'>Yum Repositories</h4>
-<a label='rpm' id='rpm' />
-<p>Coming Soon&#8230;</p>
 
+<p>Coming Soon&#8230;</p>
+<hr /><a label='deb' id='deb' />
 <h4 id='apt_repositories'>APT Repositories</h4>
-<a label='deb' id='deb' />
-<p>Coming Soon&#8230;</p>
 
+<p>Coming Soon&#8230;</p>
+<hr /><a label='mac' id='mac' />
 <h4 id='hombrewmacports'>Hombrew/Macports</h4>
-<a label='mac' id='mac' />
+
 <p>Use either MacPorts:</p>
 
 <pre><code>$ sudo port install sbt</code></pre>
@@ -117,9 +118,9 @@
 <p>Or HomeBrew:</p>
 
 <pre><code>$ brew install sbt</code></pre>
-
+<hr /><a label='manual' id='manual' />
 <h4 id='by_hand_installation'>By Hand installation</h4>
-<a label='manual' id='manual' />
+
 <p>First, download the <a href='http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-tools.sbt/sbt-launch/0.11.2/sbt-launch.jar'>launcher jar</a> and place it somewhere useful.</p>
 
 <p>THEN, create a script in that same directory.</p>
