--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <div id="container" class="cf">
 
          <div id="intro">
-           <div id="head" class="cf">
+           <div id="head" class="contained cf">
              <div id="name" class="left">
                <h1>sbt</h1>
                <h2>simple build tool</h2>
@@ -70,7 +70,7 @@
              </div>
            </div>
            <div id="features" class="cf">
-             <div id="feature-list">
+             <div id="feature-list" class="contained">
              <ul class="left">
                <li>
                  <a href="#repl">Fast, transparent REPL workflow</a>
@@ -331,9 +331,7 @@ libraryDependencies += "com.other.domain" %% "other-module" % "1.0"
 
            </ul>
            <div id="foot">
-             <div class="content">
-               footer stuff here
-             </div>
+             <div class="content"/>
            </div>
          </div>
        </div>
