--- a/repository-rules.html
+++ b/repository-rules.html
@@ -5,9 +5,10 @@
 <head>
    <title>Community Repository Policy - </title>
    <link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
-     <link href='resources/site.css' rel='stylesheet' type='text/css'>
-     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
-     </script>
+   <link href='resources/site.css' rel='stylesheet' type='text/css'>
+   <link href='resources/syntax.css' rel='stylesheet' type='text/css'>
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
+   </script>
 </head>
 <body>
 
@@ -20,6 +21,7 @@
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
            <li><a href="/community-plugins.html">Community Plugins</a></li>
+           <li><a href="/talks.html">Talks</a></li>
            <li><a target="_blank" href="http://github.com/harrah/xsbt">Source</a></li>
            <li><a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Community</a></li>
            <li><a target="_blank" href="http://github.com/harrah/xsbt/wiki">Documentation</a></li>
