--- a/repository-rules.html
+++ b/repository-rules.html
@@ -20,12 +20,9 @@
         <div class="container">
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
-           <li><a href="/community-plugins.html">Community Plugins</a></li>
-           <li><a href="/talks.html">Talks</a></li>
-           <li><a target="_blank" href="http://github.com/harrah/xsbt">Source</a></li>
-           <li><a target="_blank" href="http://groups.google.com/group/simple-build-tool/topics">Community</a></li>
-           <li><a target="_blank" href="http://github.com/harrah/xsbt/wiki">Documentation</a></li>
-           <li><a target="_blank" href="https://github.com/harrah/xsbt#readme">Contribute</a></li>
+           <li><a href="learn.html">Learn</a>
+           <li><a href="download.html">Download</a>
+           <li><a href="community.html">Community</a></li>
            <li><a href="#top">Top</a></li>
           </ul>
         </div>
@@ -69,11 +66,14 @@
      applyH();
      
      $('#features a, .st').click(function(e){
-         e.preventDefault();
          var h = $(this).attr('href');
-         $(h).ScrollTo({
-             callback:function(){ window.location.hash = h;}
-         });
+         if(h && h[0] && h[0] == '#') {
+           e.preventDefault();
+         
+           $(h).ScrollTo({
+               callback:function(){ window.location.hash = h;}
+           });
+         }
      });
    });})(jQuery);
 </script>
