--- a/download.html
+++ b/download.html
@@ -180,7 +180,11 @@ java -Xmx512M -jar &quot;%SCRIPT_DIR%sbt-launch.jar&quot; %*</code></pre>
      $("#top").click(function(){ $("#intro").ScrollTo(); })
 
      var applyH = function() {
-       $("#intro, .feature").height($(window).height());
+       $("#intro, .feature").each(function (i, elt) {
+          if ($(elt).height() < $(window).height()) {
+            $(elt).height($(window).height());
+          }
+       });
      };
      $(window).bind('resize', function() { applyH(); });
      applyH();
